--- a/index.html
+++ b/index.html
@@ -85,25 +85,16 @@
     <input id="store" type="text" maxlength="3" placeholder="請輸入3碼" />
 
     <div class="btn-group">
-      <button onclick="generate('5','3','2','normal')">內用 / 點餐機</button>
-      <button onclick="generate('4','3','2','normal')">外帶 / 點餐機</button>
-      <button onclick="generate('5','2','2','normal')">內用 / 櫃檯</button>
-      <button onclick="generate('4','2','2','normal')">外帶 / 櫃檯</button>
-      <button onclick="generate('2','4','2','normal')">快取</button>
-      <button onclick="generate('1','4','2','delivery')">外送</button>
+      <button onclick="generate('5','3','normal')">內用 / 點餐機</button>
+      <button onclick="generate('4','3','normal')">外帶 / 點餐機</button>
+      <button onclick="generate('5','2','normal')">內用 / 櫃檯</button>
+      <button onclick="generate('4','2','normal')">外帶 / 櫃檯</button>
+      <button onclick="generate('2','4','normal')">快取</button>
+      <button onclick="generate('1','4','delivery')">外送</button>
     </div>
   </div>
 
   <script>
-    const deliveryTailCodes = [
-      "10050001", "14480005", "13350004", "12230003", "18600010",
-      "20010001", "00040004", "00010004", "6449000"
-    ];
-    const normalTailCodes = [
-      "0053", "0041", "0026", "0061", "0003", "0004", "0005", "0010",
-      "0030", "0011", "0020", "0022", "0033", "0065", "0071", "0088"
-    ];
-
     function getYesterdayDateStr() {
       const d = new Date();
       d.setDate(d.getDate() - 1);
@@ -119,7 +110,7 @@
 
       let minute, second;
       if (hour === "20") {
-        minute = String(Math.floor(Math.random() * 31)).padStart(2, '0'); // 最多到 20:30
+        minute = String(Math.floor(Math.random() * 31)).padStart(2, '0');
       } else {
         minute = String(Math.floor(Math.random() * 60)).padStart(2, '0');
       }
@@ -128,7 +119,15 @@
       return hour + minute + second;
     }
 
-    function generate(M, O, K, type) {
+    function generateTailCode7Digits() {
+      const part1 = String(Math.floor(Math.random() * 11) + 10); // 10–20
+      const part2 = String(Math.floor(Math.random() * 59) + 1).padStart(2, '0'); // 01–59
+      const part3 = String(Math.floor(Math.random() * 59) + 1).padStart(2, '0'); // 01–59
+      const part4 = String(Math.floor(Math.random() * 9) + 1); // 1–9
+      return part1 + part2 + part3 + part4;
+    }
+
+    function generate(M, O, type) {
       let store = document.getElementById("store").value.trim();
       if (store.length === 2) store = "0" + store;
       if (store.length !== 3 || isNaN(store)) {
@@ -139,10 +138,8 @@
       const prefix = store.startsWith("5") ? "TWB" : "TWI";
       const date = getYesterdayDateStr();
       const timeCode = getRandomTimeCode();
-      const tail = type === 'delivery'
-        ? deliveryTailCodes[Math.floor(Math.random() * deliveryTailCodes.length)]
-        : normalTailCodes[Math.floor(Math.random() * normalTailCodes.length)];
-      const u = prefix + store + date + tail;
+      const tail = generateTailCode7Digits();
+      const u = prefix + store + date + timeCode + tail; // U 格式含時間碼
 
       const payload = {
         S: "886K" + prefix + store,
@@ -152,7 +149,7 @@
         Country: "TW",
         O: O,
         M: M,
-        K: K
+        K: "1"
       };
 
       const encoded = btoa(unescape(encodeURIComponent(JSON.stringify(payload))));
